--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "babel": "inherit"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "babel-cli": "^6.18.0",
-    "babel-polyfill": "^6.20.0",
+    "ava": "^0.18.1",
+    "babel-cli": "^6.22.2",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-env": "^1.1.8",
-    "babel-register": "^6.18.0",
+    "babel-register": "^6.22.0",
     "fetch-mock": "^5.9.3",
     "nyc": "^10.1.2"
   },
   "dependencies": {
     "@google/maps": "^0.3.1",
+    "dotenv": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-telegram-bot-api": "^0.26.0"
   },
